--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -8,3 +8,7 @@ secret: fish
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
+
+hooks:
+  post-deploy:
+    - prisma generate
