--- a/prisma/docker-compose.yml
+++ b/prisma/docker-compose.yml
@@ -1,27 +1,27 @@
-version: "3"
+version: '3'
 services:
   prisma:
     image: prismagraphql/prisma:1.34
     restart: always
 
     ports:
-      - "4466:4466"
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
-        managementApiSecret: fish
+        managementApiSecret: "${PRISMA_MANAGEMENT_API_SECRET}"
         port: 4466
         databases:
           default:
             connector: mongo
-            uri: mongodb://prisma:prisma@mongo
+            uri: "${MONGODB_URI}"
   mongo:
-    image: mongo:3.6
+    image: mongo:4.2
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: prisma
-      MONGO_INITDB_ROOT_PASSWORD: prisma
+      MONGO_INITDB_ROOT_USERNAME: '${MONGO_INITDB_ROOT_USERNAME}'
+      MONGO_INITDB_ROOT_PASSWORD: '${MONGO_INITDB_ROOT_PASSWORD}'
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - mongo:/var/lib/mongo
 volumes:
