--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.4",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.5",
     "node-sass": "^4.12.0",
     "react": "16.9.0",
+    "react-apollo": "^3.1.0",
     "react-dom": "16.9.0"
   }
 }
