--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.0.5",
+    "next": "latest",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-apollo": "^3.1.0",
     "react-dom": "16.9.0"
