--- a/server/prisma/docker-compose.yml
+++ b/server/prisma/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: '${MONGO_INITDB_ROOT_USERNAME}'
       MONGO_INITDB_ROOT_PASSWORD: '${MONGO_INITDB_ROOT_PASSWORD}'
+      APP_SECRET: '${APP_SECRET}'
     ports:
       - '27017:27017'
     volumes:
