--- a/client/.gitignore
+++ b/client/.gitignore
@@ -23,3 +23,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# package directories
+node_modules
+jspm_packages
+
+# Serverless directories
+.serverless
+/slacker-nooze/
