--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,8 @@
     "react": "16.9.0",
     "react-apollo": "^3.1.0",
     "react-dom": "16.9.0"
+  },
+  "devDependencies": {
+    "serverless-next.js": "^1.1.0"
   }
 }
