--- a/client/serverless.yml
+++ b/client/serverless.yml
@@ -1,8 +1,15 @@
 service: slacker-nooze
+custom:
+  stage: ${opt:stage, self:provider.stage}
+  environment: ${file(env.yml):${self:custom.stage}}
 
 provider:
   name: aws
   runtime: nodejs10.x
+  stage: dev
+  region: us-east-1
+  environment:
+    APP_SECRET: ${self:custom.environment.APP_SECRET}
 
 myNextApplication:
   component: serverless-next.js
