--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "NODE_ENV=development CUSTOM_ENV=local node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.1.0",
+    "dotenv-webpack": "^1.7.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
-    "prisma-client-lib": "^1.34.8"
+    "prisma-client-lib": "^1.34.8",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
-    "dotenv": "^8.1.0",
     "nodemon": "^1.19.2"
   }
 }
