--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
@@ -25,6 +26,6 @@
     "react-dom": "16.9.0"
   },
   "devDependencies": {
-    "serverless-next.js": "^1.1.0"
+    "serverless-next.js": "^1.4.1"
   }
 }
