--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-apollo": "^3.1.0",
-    "react-dom": "16.9.0",
-    "react-use-auth": "^0.5.0"
+    "react-dom": "16.9.0"
   },
   "devDependencies": {
     "serverless-next.js": "^1.4.1"
