--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-amplify/auth": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
