committing a working app, need to create/update aws id pool configuration, had omitted IdPoolRoles in the yml files

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.4",
+    "aws-appsync": "^2.0.2",
+    "aws-appsync-react": "^2.0.2",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
     "graphql": "^14.5.4",
