--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-amplify/auth": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
-    "prisma-client-lib": "^1.34.8",
-    "uninstall": "0.0.0"
+    "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
