--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "dotenv-webpack": "^1.7.0",
     "graphql": "^14.5.4",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "latest",
+    "next": "9.1.2",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
